<resources>
    <string name="app_name">gift-discovery</string>
    <string name="logo_name">Gift Discovery</string>
    <string name="slogan_name">Find the perfect gift!</string>
    <string name="search_text">Search for a gift</string>
    <string name="gift_icon_text">Gifts</string>
    <string name="occasion_icon_text">Occasions</string>
    <string name="planning_icon_text">Planning</string>
    <string name="finding_popular_gifts">Most loved and bought gifts</string>
    <string name="finding_popular_gifts_description">Discover the most cherished and sought-after gifts loved by all.</string>
    <string name="categories">Categories</string>
    <string name="view_all">view all</string>
    <string name="most_viewed">most viewed</string>

    <string-array name="gift_categories">
        <item>Electronics</item>
        <item>Books</item>
        <item>Fashion and Accessories</item>
        <item>Home and Kitchen</item>
        <item>Toys and Games</item>
        <item>Beauty and Personal Care</item>
        <item>Sports and Outdoors</item>
        <item>Food and Beverages</item>
        <item>DIY and Craft</item>
        <item>Subscription Boxes</item>
    </string-array>



</resources>