<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/rounded_bottom_corners"
        android:elevation="8dp"
        android:translationZ="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />

        <ImageView
            android:id="@+id/randomGiftImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/random_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            />



    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                >

                <TextView
                    android:id="@+id/slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/slogan_name"
                    android:textColor="@color/text_secondary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:fontFamily="serif-monospace"
                    android:layout_centerHorizontal="true"
                    />
                <RelativeLayout
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@+id/slogan"
                    android:background="@drawable/card_1"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:elevation="8dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_text"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        />
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/search_icon"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                >
                <!-- Card Icons -->
                <LinearLayout
                    android:id="@+id/iconAddGift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/_16sdp"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_1"
                        >

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/gift_icon" />

                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gift_icon_text"
                        android:textAlignment="center"
                        android:textStyle="normal"
                        android:textColor="@color/text_secondary"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/iconAddOccasion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/_16sdp"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_1"
                        >

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/holidays" />

                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/occasion_icon_text"
                        android:textAlignment="center"
                        android:textStyle="normal"
                        android:textColor="@color/text_secondary"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/iconAddPlanning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_1"
                        >

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/planning_icon" />

                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/planning_icon_text"
                        android:textAlignment="center"
                        android:textStyle="normal"
                        android:textColor="@color/text_secondary"
                        />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/card_3"
                >

                <LinearLayout
                    android:id="@+id/lovedSectionSlogan"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/card_2"
                    android:orientation="vertical"
                    >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/finding_popular_gifts"
                        android:textColor="@color/text_contrast"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/finding_popular_gifts_description"
                        android:textColor="@color/text_contrast_description"
                        />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lovedGiftRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="296dp"
                    android:layout_toRightOf="@id/lovedSectionSlogan"
                    android:background="@color/transparent"
                    android:paddingTop="@dimen/_10ssp"
                    android:paddingBottom="@dimen/_10ssp"
                    >

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_32sdp"
                android:padding="20dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:textSize="18sp"
                        android:textColor="@color/text_secondary"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:layout_centerVertical="true"
                        />


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryGiftRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Holidays"
                        android:textSize="18sp"
                        android:textColor="@color/text_secondary"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:layout_centerVertical="true"
                        />


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/OccasionRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>




</LinearLayout>